# template-cpp14

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  LICENSE.TXT  README.md  go.mod  go.sum  magefile.go  package.json  rules.yaml
goldenmaster/: CMakeLists.txt  Lifecycle for olink client-server implementation.md  README.md  test_conan.bat  test_conan.sh
goldenmaster/apigear/: ApigearConfig.cmake.in  CMakeLists.txt  conanfile.py
goldenmaster/apigear/mqtt/: CMakeLists.txt  mqttclient.cpp  mqttclient.h  mqttcommon.h  mqttcppclient.cpp  mqttcppclient.h  mqttisink.h  mqttservice.cpp  mqttservice.h  mqtttopic.cpp  mqtttopic.h  mqtttopic.test.cpp  mqtttypes.h
goldenmaster/apigear/mqtt/private/: mqttcwrapper.cpp  mqttcwrapper.h
goldenmaster/apigear/olink/: CMakeLists.txt  iolinkconnector.h  olinkclient.cpp  olinkclient.h  olinkconnection.cpp  olinkconnection.h  olinkhost.cpp  olinklogadapter.h
goldenmaster/apigear/olink/logger/: logger.cpp  logger.h
goldenmaster/apigear/olink/private/: connectionstorage.cpp  connectionstorage.h  isocketuser.h  olinkremote.cpp  olinkremote.h  olinkwebsockethandler.cpp  olinkwebsockethandler.h  requesthandlerfactory.cpp  requesthandlerfactory.h  socketwrapper.cpp  socketwrapper.h
goldenmaster/apigear/olink/tests/: CMakeLists.txt  olink_connection.test.cpp  olinkhost.test.cpp
goldenmaster/apigear/tracer/: CMakeLists.txt  tracer.cpp  tracer.h  tracer.test.cpp
goldenmaster/apigear/utilities/: CMakeLists.txt  logger.cpp  logger.h
goldenmaster/apigear/utilities/tests/: CMakeLists.txt
goldenmaster/examples/app/: CMakeLists.txt  conanfile.txt  main.cpp
goldenmaster/examples/appthreadsafe/: CMakeLists.txt  conanfile.txt  main.cpp
goldenmaster/examples/mqttclient/: CMakeLists.txt  conanfile.txt  main.cpp
goldenmaster/examples/mqttserver/: CMakeLists.txt  conanfile.txt  main.cpp
goldenmaster/examples/olinkclient/: CMakeLists.txt  conanfile.txt  main.cpp
goldenmaster/examples/olinkserver/: CMakeLists.txt  conanfile.txt  main.cpp
goldenmaster/modules/org_objectapi_testbed/: CMakeLists.txt  Org_objectapi_testbedConfig.cmake.in  conanfile.py
goldenmaster/modules/org_objectapi_testbed/implementation/: CMakeLists.txt  interface1.test.cpp  interface2.test.cpp  org_objectapi_testbed_interface1.cpp  org_objectapi_testbed_interface1.h  org_objectapi_testbed_interface2.cpp  org_objectapi_testbed_interface2.h
goldenmaster/modules/org_objectapi_testbed/test_package/: CMakeLists.txt  conanfile.py  main.cpp
goldenmaster/modules/tb_enum/: CMakeLists.txt  Tb_enumConfig.cmake.in  conanfile.py
goldenmaster/modules/tb_enum/conan/: conanfile.py
goldenmaster/modules/tb_enum/implementation/: CMakeLists.txt  enuminterface.cpp  enuminterface.h  enuminterface.test.cpp  tb_enum_enuminterface.cpp  tb_enum_enuminterface.h
goldenmaster/modules/tb_enum/test_package/: CMakeLists.txt  conanfile.py  main.cpp
goldenmaster/modules/tb_enum_module/: conanfile.py
goldenmaster/modules/tb_enum_module/tb_enum/: CMakeLists.txt  Tb_enumConfig.cmake.in
goldenmaster/modules/tb_enum_module/test_package/: CMakeLists.txt
goldenmaster/modules/tb_names/: CMakeLists.txt  Tb_namesConfig.cmake.in
goldenmaster/modules/tb_names/conan/: conanfile.py
goldenmaster/modules/tb_names/implementation/: CMakeLists.txt  names.cpp  names.h  names.test.cpp
goldenmaster/modules/tb_names_module/: conanfile.py
goldenmaster/modules/tb_names_module/tb_names/: CMakeLists.txt  Tb_namesConfig.cmake.in
goldenmaster/modules/tb_names_module/test_package/: CMakeLists.txt  conanfile.py  main.cpp
goldenmaster/modules/tb_same1/: CMakeLists.txt  Tb_same1Config.cmake.in  conanfile.py
goldenmaster/modules/tb_same1/conan/: conanfile.py
goldenmaster/modules/tb_same1/implementation/: CMakeLists.txt  sameenum1interface.h  sameenum1interface.test.cpp  sameenum2interface.test.cpp  samestruct1interface.cpp  samestruct1interface.test.cpp  samestruct2interface.cpp  samestruct2interface.h  samestruct2interface.test.cpp  tb_same1_sameenum1interface.cpp  tb_same1_sameenum1interface.h  tb_same1_sameenum2interface.cpp  tb_same1_sameenum2interface.h  tb_same1_samestruct1interface.cpp  tb_same1_samestruct1interface.h  tb_same1_samestruct2interface.cpp  tb_same1_samestruct2interface.h
goldenmaster/modules/tb_same1/test_package/: CMakeLists.txt  conanfile.py  main.cpp
goldenmaster/modules/tb_same1_module/: conanfile.py
goldenmaster/modules/tb_same1_module/tb_same1/: CMakeLists.txt  Tb_same1Config.cmake.in
goldenmaster/modules/tb_same1_module/test_package/: CMakeLists.txt  conanfile.py  main.cpp
goldenmaster/modules/tb_same2/: CMakeLists.txt  Tb_same2Config.cmake.in  conanfile.py
goldenmaster/modules/tb_same2/conan/: conanfile.py
goldenmaster/modules/tb_same2/implementation/: CMakeLists.txt  sameenum1interface.test.cpp  sameenum2interface.h  sameenum2interface.test.cpp  samestruct1interface.h  samestruct1interface.test.cpp  samestruct2interface.cpp  samestruct2interface.h  samestruct2interface.test.cpp  (+8 more)
goldenmaster/modules/tb_same2_module/: conanfile.py
goldenmaster/modules/tb_simple/: CMakeLists.txt  Tb_simpleConfig.cmake.in  conanfile.py
goldenmaster/modules/tb_simple_module/: conanfile.py
goldenmaster/modules/testbed1/: CMakeLists.txt  Testbed1Config.cmake.in  conanfile.py
goldenmaster/modules/testbed1_module/: conanfile.py
goldenmaster/modules/testbed2/: CMakeLists.txt  Testbed2Config.cmake.in  conanfile.py
goldenmaster/modules/testbed2_module/: conanfile.py
goldenmaster/scripts/: test_cmake.sh  test_conan.bat  test_conan.sh
templates/apigear/: ApigearConfig.cmake.in  CMakeLists.txt  conanfile.py
templates/apigear/mqtt/: CMakeLists.txt  mqttclient.cpp  mqttclient.h  mqttcppclient.cpp  mqttcppclient.h  mqttisink.h  mqttservice.cpp  mqttservice.h  mqtttopic.cpp  mqtttopic.h  mqtttypes.h
templates/apigear/olink/: CMakeLists.txt  iolinkconnector.h  olinkconnection.cpp  olinkconnection.h  olinkhost.cpp  olinkhost.h  olinklogadapter.h
templates/apigear/tracer/: CMakeLists.txt  tracer.cpp
templates/apigear/utilities/: CMakeLists.txt  logger.h
(+278 files in other folders)
